--- a/ecommerce/templates/ngEcommerce.html
+++ b/ecommerce/templates/ngEcommerce.html
@@ -144,7 +144,7 @@
 
             <div class="row" style="margin:0px;">
               <div class="col-sm-4 text-right">
-                <i class="fa fa-minus-circle fa-2x ng-scope" style="cursor:pointer" ng-if="p.qty >1" ng-click="updateCookieDetail($index , 'decrease');"></i>
+                <i class="fa fa-minus-circle fa-2x ng-scope" style="cursor:pointer" ng-click="updateCookieDetail($index , 'decrease');"></i>
               </div>
               <div class="col-sm-4 text-center">
                 {{p.qty}}
