--- a/ecommerce/templates/ngEcommerce.html
+++ b/ecommerce/templates/ngEcommerce.html
@@ -111,8 +111,12 @@
               </div>
             </div>
 
-            <div class="row" style="margin:0px;padding-left:20px;" >
+            <div class="row" style="margin:0px;padding-left:20px;">
               <i class="fa fa-inr"></i>  {{(p.product.product.discountedPrice * p.qty).toFixed(2) }}
+            </div>
+
+            <div class="row" style="margin:0px;padding-left:20px;" ng-if="p.product.in_stock=='false'">
+              <span style="font-size:18px;color:#ef4a1e">Out Of Stock</span>
             </div>
 
           </div>
@@ -154,8 +158,12 @@
               </div>
             </div>
 
-            <div class="row" style="margin:0px;padding-left:20px;" >
+
+            <div class="row" style="margin:0px;padding-left:20px;">
               <i class="fa fa-inr"></i>  {{(p.product.product.discountedPrice*p.qty).toFixed(2)}}
+            </div>
+            <div class="row" style="margin:0px;padding-left:20px;" ng-if="p.in_stock=='false'">
+              <span style="font-size:18px;color:#ef4a1e">Out Of Stock</span>
             </div>
 
           </div>
