--- a/ecommerce/templates/ngEcommerce.html
+++ b/ecommerce/templates/ngEcommerce.html
@@ -112,7 +112,9 @@
             </div>
 
             <div class="row" style="margin:0px;padding-left:20px;">
-              <i class="fa fa-inr"></i>  {{(p.product.product.discountedPrice * p.qty).toFixed(2) }}
+              <i class="fa fa-inr"></i>
+              <span ng-if="p.prodSku==p.product.product.serialNo">{{(p.product.product.discountedPrice * p.qty).toFixed(2) }}</span>
+              <span ng-if="p.prodSku!=p.product.product.serialNo">{{(p.prodVarPrice * p.qty).toFixed(2)}}</span>
             </div>
 
             <div class="row" style="margin:0px;padding-left:20px;" ng-if="p.product.in_stock=='false'">
@@ -161,6 +163,8 @@
 
             <div class="row" style="margin:0px;padding-left:20px;">
               <i class="fa fa-inr"></i>  {{(p.product.product.discountedPrice*p.qty).toFixed(2)}}
+              {{p.product.product.product_variants}}
+               {{p.product.product.serialNo}}
             </div>
             <div class="row" style="margin:0px;padding-left:20px;" ng-if="p.in_stock=='false'">
               <span style="font-size:18px;color:#ef4a1e">Out Of Stock</span>
