--- a/libreERP/templates/ngBase.html
+++ b/libreERP/templates/ngBase.html
@@ -202,7 +202,8 @@
       <script src="{% static 'js/angular.min.js' %}"></script>
       <script src="{% static 'js/angular-ui-router.min.js' %}"></script>
       <script src="{% static 'js/angular-sanitize.min.js' %}"></script>
-      <script src="{% static 'js/Chart.min.js' %}"></script>
+      <!-- <script src="{% static 'js/Chart.min.js' %}"></script> -->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
       <script src="{% static 'js/angular-chart.min.js' %}"></script>
       <script src="{% static 'js/fabric.min.js' %}"></script>
       <script src="{% static 'js/tinymce.min.js' %}"></script>
