--- a/libreERP/templates/ngBase.html
+++ b/libreERP/templates/ngBase.html
@@ -104,7 +104,7 @@
     <div class="col-md-1 mainUIViewParent" id="mainUIParent" style="overflow-x: hidden;{{sideMenuVisibility ? 'width:87%': 'width:95%;'}};{{mobileView ? 'width:70%': ';'}}; padding:0px;right:0px;position:absolute;">
     {% endverbatim %}
       <div ng-include="headerUrl"></div>
-      <div id="mainUI" style="" class="mainUIView" ui-view ng-if="modules.length>0">
+      <div id="mainUI" style="margin-top:5.2vh" class="mainUIView" ui-view ng-if="modules.length>0">
 
         <style>
 
