--- a/ecommerce/templates/ngEcommerce.html
+++ b/ecommerce/templates/ngEcommerce.html
@@ -144,7 +144,7 @@
 
           <div class="row" style="margin:0px;">
             <div class="container-fluid">
-              <h2>Cart</h2>
+              <h2>Cart cookie</h2>
             </div>
           </div>
 
