changes in product inventory

--- a/homepage/templates/footer.html
+++ b/homepage/templates/footer.html
@@ -37,12 +37,12 @@
         <ul class="list-inline social-buttons">
           <li class="facebook"><a href="https://www.facebook.com/Monomerce-357485684752172/" style="cursor:pointer;background:  #125688;color: white;border-radius: 50%;"><i class="fa fa-facebook"></i></a>
           </li>
-          <li class="linkedin"><a href="https://www.linkedin.com/company/monomerce/" style="cursor:pointer;background:  #3B5998;color: white;border-radius: 50%;"><i class="fa fa-linkedin"></i></a>
+          <!-- <li class="linkedin"><a href="https://www.linkedin.com/company/monomerce/" style="cursor:pointer;background:  #3B5998;color: white;border-radius: 50%;"><i class="fa fa-linkedin"></i></a>
           </li>
           <li class="twitter"><a href="https://www.twitter.com/company/monomerce/" style="cursor:pointer;background:  #55ACEE;color: white;border-radius: 50%;"><i class="fa fa-twitter"></i></a>
           </li>
             <li class="pinterest"><a href="https://www.pinterest.com/company/monomerce/" style="cursor:pointer;background: #cb2027;color: white;border-radius: 50%;"><i class="fa fa-pinterest"></i></a>
-          </li>
+          </li> -->
 
           <!-- <li class="instagram"><a href="#"><i class="fa fa-instagram"></i></a>
           </li> -->
