--- a/libreERP/templates/ngBase.html
+++ b/libreERP/templates/ngBase.html
@@ -194,6 +194,7 @@
       <script src="https://pc035860.github.io/angular-highlightjs/angular-highlightjs.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-audio/1.7.2/angular.audio.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/angularjs-slider/6.4.0/rzslider.min.js"></script>
+
     {% else %}
     <!-- <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML'></script> -->
       <script src="{% static 'js/jquery-2.1.4.min.js' %}"></script>
@@ -210,6 +211,9 @@
       <script src="{% static 'js/angular-highlightjs.min.js' %}"></script>
       <script src="{% static 'js/angular.audio.min.js' %}"></script>
       <script src="{% static 'js/rzslider.min.js' %}"></script>
+        <script src="{% static '/js/web-notification.js' %}"></script>
+      <script src="{% static '/js/angular-web-notification.js' %}"></script>
+
 
       <!-- <script src="{% static 'js/MathJax.js' %}"></script> -->
     {% endif %}
