--- a/HR/templates/loginNew.html
+++ b/HR/templates/loginNew.html
@@ -54,7 +54,10 @@
       </a> -->
     </form>
 
-
+    <div class="col-md-12 col-sm-12 col-xs-12 text-right" style="margin-top:60%">
+      <!-- <button class="btn btn-primary">Admin Login</button> -->
+        <a href="/admin/login/?next=/admin/">Admin Login</a>
+    </div>
   </div>
   <!-- /container -->
   {% if useCDN %}
