--- a/homepage/templates/registration.html
+++ b/homepage/templates/registration.html
@@ -209,7 +209,7 @@
 
                     <div class="row" style="margin-top:50px;">
                       <div class="col-md-2 col-sm-2 col-xs-2">
-                        <input type="checkbox" class="form-control pull-right" ng-model="form.agree">
+                        <input type="checkbox" class=" pull-right" ng-model="form.agree">
                       </div>
                       <div class="col-md-10 col-sm-10 col-xs-10">
                         <span>I have read, understood, and I agree to the " <a target="_blank" href="/terms">Terms and Conditions</a> " set forth by  Sterling Select.</span>
