--- a/ecommerce/templates/ngEcommerce.html
+++ b/ecommerce/templates/ngEcommerce.html
@@ -74,11 +74,11 @@
 
 
 
-      <div class="hidden-lg hidden-md bg-blue text-center" style="position:fixed;bottom:0px;width:100%;cursor:pointer"  ng-click="checkout()" ng-if="inCart.length>0 && !$state.is('checkout') && !$state.includes('account')">
+      <div class="hidden-lg hidden-md text-center" style="position:fixed;bottom:0px;width:100%;cursor:pointer;background-color:var(--themeColor)"  ng-click="checkout()" ng-if="inCart.length>0 && !$state.is('checkout') && !$state.includes('account')">
         <h5 style="color:white;">Checkout ( <i class="fa fa-inr" ></i> {{data.total.toFixed(2)}} )</h5>
       </div>
 
-      <div class="hidden-lg hidden-md bg-blue text-center" style="position:fixed;bottom:0px;width:100%;cursor:pointer"  ng-click="mainPage()" ng-if="addToCart.length>0&&!me.pk">
+      <div class="hidden-lg hidden-md text-center" style="position:fixed;bottom:0px;width:100%;cursor:pointer;background-color:var(--themeColor)"  ng-click="mainPage()" ng-if="addToCart.length>0&&!me.pk">
         <h5 style="color:white;">Checkout ( <i class="fa fa-inr" ></i> {{data.totalVal.toFixed(2)}})</h5>
       </div>
 
@@ -127,7 +127,7 @@
             </div>
           </div>
 
-          <div class="text-center bg-blue" style="padding:20px;cursor:pointer;" ng-click="checkout()">
+          <div class="text-center" style="padding:20px;cursor:pointer;background-color:var(--themeColor);color:white" ng-click="checkout()">
             Checkout ( <i class="fa fa-inr" ></i> {{data.total.toFixed(2)}} )
           </div>
         </div>
@@ -177,7 +177,7 @@
 
           </div>
 
-          <div class="text-center bg-blue" style="padding:20px;cursor:pointer;" ng-click="mainPage()">
+          <div class="text-center" style="padding:20px;cursor:pointer;background-color:var(--themeColor);color:white" ng-click="mainPage()">
             Checkout ( <i class="fa fa-inr" ></i> {{data.totalVal.toFixed(2)}} )
           </div>
         </div>
