--- a/homepage/templates/registration.lite.html
+++ b/homepage/templates/registration.lite.html
@@ -77,10 +77,10 @@
                     <div class="row " style="margin-bottom:15px;" ng-if="mode == 'main'||'verify'">
                       <div class="col-md-6 col-md-offset-3">
                         <div class="row">
-                          <div class="col-md-2 col-sm-2 col-xs-2">
-                            <span><i class="fa fa-phone" style="margin-top: 45px;font-size: 20px;color:#147fcc"></i></span>
+                          <div class="col-md-3 col-sm-3 col-xs-3">
+                            <span><i class="fa fa-phone" style="margin-top: 45px;font-size: 20px;color:#147fcc"></i> &nbsp;&nbsp;&nbsp; +91</span>
                           </div>
-                          <div class="col-md-10 col-sm-10 col-xs-10">
+                          <div class="col-md-9 col-sm-9 col-xs-9">
                             <div class="form-group">
                               <input onkeydown='return (event.which >= 48 && event.which <= 57) || event.which == 8 || event.which == 46 || event.which == 9 ||( event.which > 94 && event.which <106)'  maxlength="10" ng-model="form.mobile" type="text" class="form-control floatInput" required/>
                               <span class="floating-label">Phone *</span>
@@ -94,7 +94,7 @@
 
                     <div class="row" style="margin-top:50px;"  ng-if="mode == 'main'">
                       <div class="col-md-2 col-sm-2 col-xs-2">
-                        <input type="checkbox" class="form-control pull-right" ng-model="form.agree">
+                        <input type="checkbox" class="pull-right" ng-model="form.agree">
                       </div>
                       <div class="col-md-10 col-sm-10 col-xs-10">
                         <span>I have read, understood, and I agree to the " <a target="_blank" href="/terms">Terms and Conditions</a> " set forth by  Sterling Select.</span>
