--- a/libreERP/templates/ngBase.html
+++ b/libreERP/templates/ngBase.html
@@ -176,6 +176,7 @@
         tex2jax: {inlineMath: [['$','$']]}
       });
     </script>
+    <script src='//maps.googleapis.com/maps/api/js?sensor=false&key=AIzaSyBE7461fCAOyu3Xd9_6Y9At6RHJEkw2QLc&libraries=placeses,visualization,drawing,geometry,places'></script>
 
     {% if useCDN %}
       <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
@@ -226,6 +227,7 @@
     <script src="{% static 'js/markdown.min.js' %}"></script>
     <script src="{% static 'js/angular-ui-switch.min.js' %}"></script>
     <script src="{% static 'js/jquery.orgchart.min.js' %}"></script>
+    <script src="https://rawgit.com/allenhwkim/angularjs-google-maps/master/build/scripts/ng-map.js"></script>
     <!-- <script src="{% static 'js/angular-cookies.js' %}"></script> -->
     <!-- Custom JS files -->
     <script type="text/javascript">
