--- a/ecommerce/templates/ngEcommerce.html
+++ b/ecommerce/templates/ngEcommerce.html
@@ -54,6 +54,12 @@
     <link rel="stylesheet" href="{% static 'css/angular-aside.min.css' %}" charset="utf-8">
     <link rel="stylesheet" href="{% static 'css/ng-tags-input.min.css' %}" charset="utf-8">
     <link rel="stylesheet" href="{% static 'css/anim-in-out.css' %}" charset="utf-8">
+
+
+    <link rel="stylesheet" href="{% static 'css/owl.carousel.css' %}" charset="utf-8">
+    <link rel="stylesheet" href="{% static 'css/owl.theme.default.css' %}" charset="utf-8">
+
+
     <!-- custom css -->
     <link rel="stylesheet" href="{% static 'css/custom/base.css' %}" charset="utf-8">
     <link rel="stylesheet" href="{% static 'css/app.ecommerce.css' %}" charset="utf-8">
@@ -233,6 +239,11 @@
     <script src="{% static 'js/custom/directive.table.js' %}"></script>
     <script src="{% static 'js/custom/directives.native.js' %}"></script>
     <script src="{% static 'js/custom/filters.js' %}"></script>
+
+    <script src="{% static 'js/owl.carousel.min.js' %}"></script>
+    <script src="{% static 'js/angular-owl-carousel-2.js' %}"></script>
+
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ng-meta/1.0.3/ngMeta.min.js"></script>
 
   </body>
