--- a/homepage/templates/header.html
+++ b/homepage/templates/header.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default navbar-shrink bg-blue navbar-fixed-top">
+<nav class="navbar navbar-default navbar-fixed-top animated slideInDown"  id="navbarTop" style="{{sideMenuVisibility ? 'margin-left:13%': 'margin-left:5%;'}};{{mobileView ? 'margin-left:31%':''}};">
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header page-scroll">
