--- a/HR/templates/loginCopy.html
+++ b/HR/templates/loginCopy.html
@@ -68,7 +68,7 @@
     </form>
 
     <div class="col-md-12 col-sm-12 col-xs-12 text-right" style="margin-top:90%">
-    <a href="/admin/login/?next=/admin/">Admin Login</a>
+    <a href="/admin/">Admin Login</a>
     </div>
   </div>
  <!--  <div class="col-xs-12 col-sm-12 hidden-lg hidden-md" style="background-image: url('{{backgroundImage}}');background-size: cover;height:40vh;position:absolute;left:0px;margin-top:350px">
