--- a/HR/templates/login.html
+++ b/HR/templates/login.html
@@ -26,7 +26,7 @@
   </div>
   <div class="col-md-4 col-sm-12 col-xs-12" style="height:100%;position:absolute;right:0px;">
     <a  href="/" style="outline: none;border:none"><img class="text-center"  src="{{icon_logo}}" alt="" width="200" height="200" Style="display:block;margin-left: auto;margin-right: auto;"></a>
-    <form method="post" class="form-signin" action="" style="padding:0px">{% csrf_token %}
+    <form method="post" class="form-signin" action="" style="padding:0px;max-width: 400px;">{% csrf_token %}
       <h2 class="form-signin-heading" style="color:black;margin-top:70px;">Login</h2> {% if authStatus.status != 'default' %}
       <div class="alert alert-{{authStatus.status}}">{{authStatus.message}}</div>
       {% endif %}
@@ -44,7 +44,7 @@
        <input id="username" name="username" type="text" maxlength="10" class="form-control" placeholder="Mobile Number" required autofocus>
      </div>
        <!--   <input id="otp" name="otp" type="text" class="form-control" placeholder="OTP" required autofocus> -->
-       <div class="col-md-12">
+       <div class="col-md-10 col-md-offset-2">
        <label for="password" class="sr-only">Password</label>
        <input id="password" name="password" type="password" class="form-control" placeholder="Password" required>
        <button id="signIn" style="margin-bottom:20px; margin-top:10px;" class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
@@ -52,15 +52,17 @@
      </div>
 
    <!--    <a style="color:black;" href="/accounts/password/reset/">Forgot password?</a><br/> -->
+    <div class="col-md-10 col-xs-10 col-sm-10 col-md-offset-2 col-xs-offset-2 col-sm-offset-2 ">
       <a style="color:black;" href="registerPage">New User?</a>
-
+    </div>
+      <div class="col-md-12">
       <div id="requestOTP" style="width:100px;height:100px;background-color:#0a9199;border-radius:50px; padding-top:10px;margin:auto;margin-top:50px;cursor:pointer;" class="text-center">
         <span style="color:white;">
             <i class="fa fa-mobile fa-3x" ></i> <br>
             <span id="otptxt">Send OTP</span>
           </span>
       </div>
-
+</div>
 <!--       <a href="/register" class="btn btn-success btn-block" style="margin-top:150px;">Register</a>
           <a title="Google" class="btn btn-danger btn-block" href="{% provider_login_url "google" method="oauth2" %}">
             <i class="fa fa-google-plus pull-left"></i>Login with Google
