--- a/HR/templates/login.html
+++ b/HR/templates/login.html
@@ -39,12 +39,12 @@
       <div class="col-md-2 col-sm-2 col-xs-2 text-right" style="padding-top:10px">
       <span>+91</span>
       </div>
-      <div class="col-md-10 col-sm-10 col-xs-10  ">
+      <div class="col-md-10 col-sm-10 col-xs-10">
         <label for="username" class="sr-only">Mobile Number</label>
        <input id="username" name="username" type="text" maxlength="10" class="form-control" placeholder="Mobile Number" required autofocus>
      </div>
        <!--   <input id="otp" name="otp" type="text" class="form-control" placeholder="OTP" required autofocus> -->
-       <div class="col-md-10 col-md-offset-2">
+       <div class="col-md-10 col-md-offset-2 col-xs-10 col-xs-offset-2 col-sm-10 col-sm-offset-2">
        <label for="password" class="sr-only">Password</label>
        <input id="password" name="password" type="password" class="form-control" placeholder="Password" required>
        <button id="signIn" style="margin-bottom:20px; margin-top:10px;" class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
@@ -55,7 +55,7 @@
     <div class="col-md-10 col-xs-10 col-sm-10 col-md-offset-2 col-xs-offset-2 col-sm-offset-2 ">
       <a style="color:black;" href="registerPage">New User?</a>
     </div>
-      <div class="col-md-12">
+      <div class="col-md-12 col-sm-12 col-xs-12">
       <div id="requestOTP" style="width:100px;height:100px;background-color:#0a9199;border-radius:50px; padding-top:10px;margin:auto;margin-top:50px;cursor:pointer;" class="text-center">
         <span style="color:white;">
             <i class="fa fa-mobile fa-3x" ></i> <br>
@@ -76,6 +76,8 @@
       {% csrf_token %}
       <input type="text" name="mobile" value="" id="regMobile">
     </form>
+
+
 
 
 
