--- a/homepage/templates/registration.html
+++ b/homepage/templates/registration.html
@@ -217,6 +217,7 @@
                               </div>
                               <div class="col-md-10 col-sm-10 col-xs-10">
                               <input ng-model="form.pincode" type="text" class="form-control floatInput" required/><br/>
+                              <span class="floating-label">Pincode</span>
                             </div>
                           </div>
                               {% endif %}
